# torch_brain

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  train.py
.github/workflows/: linting.yml  test-kirby.yml  testing.yml
configs/: data.yaml  finetune.yaml  train.yaml  train_mc_maze_small.yaml  train_poyo_mp.yaml
configs/dataset/: allen_neuropixels.yaml  allen_visual_coding_ophys_2016.yaml  allen_visual_coding_ophys_2016_dg.yaml  falcon_m2_2024.yaml  perich_miller_population_2018.yaml  perich_mrt_all.yaml  perich_single_session_mrt.yaml  perich_true_single_session_mrt.yaml  witten_benson_brain_2023.yaml
configs/datasets/: mc_maze_small.yaml  perich_miller_population_2018.yaml
configs/model/: poyo_1.yaml  poyo_galaxy.yaml  poyo_single_session.yaml
docs/: README.md  requirements.txt
hydra_plugins/: searchpath_plugin.py
kirby/: __init__.py
scripts/: calculate_normalization_scales.py
tests/: test_binning.py  test_collate.py  test_dataset_real.py  test_dataset_sim.py  test_deccoding_stitch_evaluator.py  test_decoding_stitch_evaluator.py  test_infinite_vocab_embedding.py  test_loss.py  test_multitask_decoding_stitch_evaluator.py  test_poyo_plus.py  test_random_time_scaling.py  test_registry.py  test_rotary_attention.py  test_sampler.py  test_stitch.py  test_stitcher_sampler.py  test_tokenizers.py  test_unit_dropout.py  test_unit_filter.py  test_validation.py  test_weights.py  test_zscaling_script.py
torch_brain/: __init__.py  optim.py  registry.py
(+293 files in other folders)
