[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_brain"
version = "0.1.0"
description = "A package for deep learning models for neuroscience"
readme = "README.md"
authors = [
    {name = "Mehdi Azabou", email = "mehdiazabou@gmail.com"},
    {name = "Vinam Arora", email = "vinam@gatech.edu"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "temporaldata>=0.1.3",
    "numpy",
    "torch~=2.0",
    "einops~=0.6.0",
    "hydra-core~=1.3.2",
    "torchtyping~=0.1",
    "torchmetrics>=1.6.0",
    "pydantic~=2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black==24.2.0",
    "pre-commit>=3.5.0",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/neuro-galaxy/torch_brain"
Issues = "https://github.com/neuro-galaxy/torch_brain/issues"
Documentation = "https://torch-brain.readthedocs.io/en/latest/"

[tool.setuptools]
packages = [
    "torch_brain",
    "torch_brain.data",
    "torch_brain.nn",
    "torch_brain.models",
    "torch_brain.utils",
    "torch_brain.transforms",
]